--- a/cadastro.html
+++ b/cadastro.html
@@ -56,10 +56,10 @@
                     <input type="checkbox" value="1" > Especialidade 1
                 </div>
                 <div class="col-md-10 patologia hidden">
-                    <input type="checkbox" value="1" > Patologia 1-1
+                    <input type="checkbox" value="1" > Enfase 1-1
                 </div>
                 <div class="col-md-10 col-offset-2 patologia hidden">
-                    <input type="checkbox" value="1"> Patologia 1-2
+                    <input type="checkbox" value="1"> Enfase 1-2
                 </div>
             </div>
             <div class="row">
